--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,12 @@ android {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
     }
+
+    repositories {
+        flatDir {
+            dirs '../library-common/libs'
+        }
+    }
 }
 
 dependencies {
