--- a/module.build.gradle
+++ b/module.build.gradle
@@ -61,5 +61,10 @@ android {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
     }
+    repositories {
+        flatDir {
+            dirs '../library-common/libs'
+        }
+    }
 }
 
