--- a/module-home/src/main/AndroidManifest.xml
+++ b/module-home/src/main/AndroidManifest.xml
@@ -7,5 +7,6 @@
             />
         <activity android:name=".main.HomeGddsDetailActivity"/>
         <activity android:name=".gdds.gddslist.HomeGddsRankListctivity"/>
+        <activity android:name=".jlyt.HomeJlytActivity"/>
     </application>
 </manifest>
