--- a/library-base/build.gradle
+++ b/library-base/build.gradle
@@ -62,7 +62,10 @@ dependencies {
     api rootProject.ext.dependencies["BaseRecyclerViewAdapterHelper"]
     api rootProject.ext.dependencies["immersionbar"]
     api rootProject.ext.dependencies["glide"]
+    api rootProject.ext.dependencies["LiveEventBus"]
+    api rootProject.ext.dependencies["SmartRefreshLayout"]
+    api rootProject.ext.dependencies["numberPickerView"]
     api 'com.alibaba:fastjson:1.2.9'
-    api 'com.jeremyliao:live-event-bus-x:1.6.1'
+    api 'com.zhy:base-rvadapter:3.0.3'
 
 }
