--- a/library-common/build.gradle
+++ b/library-common/build.gradle
@@ -60,4 +60,5 @@ dependencies {
     api 'com.github.zhpanvip:BannerViewPager:2.6.6'
     api 'com.github.zhpanvip:viewpagerindicator:1.0.0'
     api (name: 'alipaySdk_15.7.5_20200422171619', ext: 'aar')
+    api 'com.yanzhenjie.recyclerview:support:1.3.2'
 }
