--- a/config.gradle
+++ b/config.gradle
@@ -48,7 +48,8 @@ ext {
             "RxUI"                         : "com.github.tamsiree.RxTool:RxUI:2.5.9",
             "LiveEventBus"                 : "com.jeremyliao:live-event-bus-x:1.6.1",
             "SmartRefreshLayout"           : 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0',
-            "numberPickerView"             : "cn.carbswang.android:NumberPickerView:1.2.0"
+            "numberPickerView"             : "cn.carbswang.android:NumberPickerView:1.2.0",
+            "RvAdapter"                    : "com.zhy:base-rvadapter:3.0.3"
     ]
 
 }
