积利银条详情

--- a/module-home/src/main/AndroidManifest.xml
+++ b/module-home/src/main/AndroidManifest.xml
@@ -8,5 +8,6 @@
         <activity android:name=".main.HomeGddsDetailActivity"/>
         <activity android:name=".gdds.gddslist.HomeGddsRankListctivity"/>
         <activity android:name=".jlyt.HomeJlytActivity"/>
+        <activity android:name=".jlyt.HomeJlytDetailActivity"/>
     </application>
 </manifest>
