--- a/library-network/build.gradle
+++ b/library-network/build.gradle
@@ -48,6 +48,7 @@ android {
 
 dependencies {
     //第三方依赖库
+    api project(':library-base')
     api 'com.squareup.okhttp3:logging-interceptor:3.12.2'
     api 'com.squareup.okhttp3:okhttp:3.12.2'
     api 'com.jakewharton:disklrucache:2.0.2'
