--- a/module-community/src/main/AndroidManifest.xml
+++ b/module-community/src/main/AndroidManifest.xml
@@ -1,3 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yzg.community">
+    <application>
+        <activity android:name=".recommend.QuotationActivity"/>
+    </application>
 </manifest>
