--- a/library-base/build.gradle
+++ b/library-base/build.gradle
@@ -81,4 +81,5 @@ dependencies {
     //    compile 'com.lzy.net:okrx2:2.0.2'//基于RxJava2的扩展项目
     api 'com.lzy.net:okserver:2.0.5'
     api 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
+    compile project(path: ':chartmodule')
 }
