--- a/simulateddata/build.gradle
+++ b/simulateddata/build.gradle
@@ -27,4 +27,5 @@ dependencies {
 
   implementation 'androidx.appcompat:appcompat:1.0.2'
   implementation 'com.squareup.duktape:duktape-android:1.3.0'
+  implementation 'com.alibaba:fastjson:1.2.9'
 }
