1.新增地址选择

--- a/module-user/build.gradle
+++ b/module-user/build.gradle
@@ -18,4 +18,6 @@ dependencies {
     annotationProcessor rootProject.ext.dependencies["arouter-compiler"]
     annotationProcessor rootProject.ext.dependencies["glide-compiler"]
     api project(':library-common')
+    implementation 'liji.library.dev:citypickerview:5.2.2'
+
 }
