--- a/module-user/src/main/AndroidManifest.xml
+++ b/module-user/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         <activity android:name=".address.UserAddressActivity"/>
         <activity android:name=".address.UserAddressAddActivity"/>
         <activity android:name=".UserDealAccountActivity"/>
+        <activity android:name=".BindAliPayActivity"/>
     </application>
 
 </manifest>
