1.修改密码 2.验证码

--- a/module-user/src/main/AndroidManifest.xml
+++ b/module-user/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         <activity android:name=".address.UserAddressAddActivity"/>
         <activity android:name=".UserDealAccountActivity"/>
         <activity android:name=".BindAliPayActivity"/>
+        <activity android:name=".UserEditPwdActivity"/>
     </application>
 
 </manifest>
