--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@
 apply from: "config.gradle"
 apply plugin: 'com.alibaba.arouter'
 buildscript {
-    ext.kotlin_version = '1.3.61'
+//    ext.kotlin_version = '1.3.61'
+    ext.kotlin_version = '1.5.0'
     repositories {
         maven {
             url 'https://maven.aliyun.com/repository/google'
@@ -27,9 +28,10 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath 'com.android.tools.build:gradle:4.1.3'
         classpath "com.alibaba:arouter-register:1.0.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.10"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
